- Fixed user profile image alignment issue - Video link below of the user video image

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -13,7 +13,7 @@
 .image-setting {
     width: 99px !important;
     height: 99px !important;
-    margin-left: 50px !important;
+    /*margin-left: 50px !important;*/
     /*margin-bottom: 60px !important;*/
     padding: 0px !important;
     position: initial !important;
